Fix cropping issues and updated ui
Fix issues when it comes to the final image and change some things related to ui

--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#root{
+    margin-top: 100px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* flex-direction: column; */
+}
+
 .image-file {
     display: none;
 }
@@ -9,13 +24,13 @@
     overflow: hidden;
     margin: auto;
     position: relative;
-    margin-top: 200px;
+    /* margin-top: 200px; */
 }
 
 .controller{
     position: absolute;
     top: 0;
-    left: 2rem;
+    left: 0;
     width: var(--target-width);
     height: var(--target-height);
     overflow: hidden;
@@ -61,4 +76,12 @@
     height: 10px;
     background-color: green;
     z-index: 600000 ;
+}
+
+
+
+
+
+.cropper-actions button{
+    margin: 2rem 0;
 }
